[gd_scene load_steps=6 format=3 uid="uid://cwa8vrnbvlrep"]

[ext_resource type="Script" path="res://Assets/Scripts/Player.gd" id="1_osa1i"]
[ext_resource type="Texture2D" uid="uid://drl4gs7xbbbcu" path="res://Assets/Sprites/slider.png" id="2_0odhh"]
[ext_resource type="Script" path="res://Assets/Scripts/UI_Blackjack.gd" id="2_r4fvk"]
[ext_resource type="Script" path="res://Assets/Scripts/CameraBehaviour.gd" id="4_cdf37"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hjk4x"]
properties/0/path = NodePath(".:money")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:action")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:is_ready")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:user_name")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="Player" type="Node2D"]
position = Vector2(-12, -10)
script = ExtResource("1_osa1i")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hjk4x")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(576, 328)
zoom = Vector2(0.7, 0.7)
script = ExtResource("4_cdf37")

[node name="UI" type="Control" parent="Camera"]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = -565.0
offset_top = -317.0
offset_right = 12.0
offset_bottom = 5.0
script = ExtResource("2_r4fvk")
metadata/_edit_use_anchors_ = true

[node name="Blackjack" type="Control" parent="Camera/UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ready" type="Button" parent="Camera/UI/Blackjack"]
layout_mode = 2
offset_left = 221.0
offset_top = 251.0
offset_right = 277.0
offset_bottom = 282.0
text = "Ready"

[node name="Hit" type="Button" parent="Camera/UI/Blackjack"]
layout_mode = 0
offset_left = 137.0
offset_top = 208.0
offset_right = 168.0
offset_bottom = 239.0
text = "Hit"

[node name="Stay" type="Button" parent="Camera/UI/Blackjack"]
layout_mode = 0
offset_left = 333.0
offset_top = 206.0
offset_right = 341.0
offset_bottom = 214.0
text = "Stay"

[node name="Slider" type="HSlider" parent="Camera/UI/Blackjack"]
layout_mode = 0
offset_left = 203.0
offset_top = 191.0
offset_right = 306.85
offset_bottom = 207.0
theme_override_icons/grabber = ExtResource("2_0odhh")
theme_override_icons/grabber_highlight = ExtResource("2_0odhh")
theme_override_icons/grabber_disabled = ExtResource("2_0odhh")
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="Camera/UI/Blackjack/Slider"]
layout_mode = 0
offset_left = -4.0
offset_top = -30.0
offset_right = 36.0
offset_bottom = -7.0
text = "Bet:"

[node name="Menu" type="Control" parent="Camera/UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Name" type="TextEdit" parent="Camera/UI/Menu"]
layout_mode = 0
offset_left = 343.0
offset_top = 3.0
offset_right = 450.0
offset_bottom = 38.0
metadata/_edit_use_anchors_ = true

[node name="Lobby_text" type="Label" parent="Camera/UI/Menu"]
texture_filter = 2
offset_left = -11.0
offset_top = -11.0
offset_right = 279.0
offset_bottom = 313.0
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="Camera/UI/Blackjack/Ready" to="." method="toggle_ready"]
[connection signal="button_down" from="Camera/UI/Blackjack/Hit" to="." method="action1"]
[connection signal="button_down" from="Camera/UI/Blackjack/Stay" to="." method="action2"]
