[gd_scene load_steps=6 format=3 uid="uid://da6bakvdyqqxh"]

[ext_resource type="Script" path="res://Scenes/black_jack.gd" id="1_qnqn4"]
[ext_resource type="Script" path="res://Scenes/CameraBehaviour.gd" id="2_4xx7m"]
[ext_resource type="Script" path="res://dealer.gd" id="2_kdgjt"]
[ext_resource type="Script" path="res://Table.gd" id="2_uy2bo"]
[ext_resource type="Script" path="res://Player.gd" id="6_fdxyr"]

[node name="BlackJack" type="Node2D"]
texture_filter = 1
script = ExtResource("1_qnqn4")

[node name="Dealer" type="Node" parent="."]
script = ExtResource("2_kdgjt")

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("2_4xx7m")

[node name="Table" type="Node" parent="."]
script = ExtResource("2_uy2bo")

[node name="Player" type="Node" parent="."]
script = ExtResource("6_fdxyr")
